Remove Application dependency (leftovers). Port functionality to bootique-swagger-jakarta.