@@ -1,38 +1,17 @@
-/*
- * Licensed to ObjectStyle LLC under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ObjectStyle LLC licenses
- * this file to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- *   http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
- */
-package io.bootique.swagger;
+package io.bootique.swagger.factory;
 
 import io.bootique.annotation.BQConfig;
 import io.bootique.annotation.BQConfigProperty;
 import io.bootique.resource.ResourceFactory;
+import io.bootique.swagger.OpenApiLoader;
+import io.bootique.swagger.OpenApiModel;
 import io.swagger.v3.oas.models.OpenAPI;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.net.URL;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-
-/**
- * @since 2.0
- */
 @BQConfig
 public class OpenApiModelFactory {
 
@@ -45,7 +24,9 @@ public class OpenApiModelFactory {
     private List<String> resourcePackages;
     private List<String> resourceClasses;
 
-    public Optional<OpenApiModel> createModel(ResourceFactory sharedOverrideSpec, boolean prettyPrint) {
+    public Optional<OpenApiModel> createModel(
+            ResourceFactory sharedOverrideSpec,
+            boolean prettyPrint) {
 
         if (pathJson == null && pathYaml == null) {
             LOGGER.info("Neither 'pathJson' not 'pathYaml' are set. Skipping OpenApiModel creation");
@@ -58,7 +39,11 @@ public class OpenApiModelFactory {
         String pathJson = normalizePath(this.pathJson);
         String pathYaml = normalizePath(this.pathYaml);
 
-        return Optional.of(new OpenApiModel(() -> createOpenApi(spec, overrideSpec), pathJson, pathYaml, prettyPrint));
+        return Optional.of(new OpenApiModel(
+                () -> createOpenApi(spec, overrideSpec),
+                pathJson,
+                pathYaml,
+                prettyPrint));
     }
 
     protected String normalizePath(String path) {
@@ -70,8 +55,8 @@ public class OpenApiModelFactory {
         // our own implementation. JaxrsOpenApiContextBuilder is too dirty and unpredictable, and not easy to
         // extend to do our own config merging
 
-        List<String> resourcePackages = this.resourcePackages != null ? this.resourcePackages : Collections.emptyList();
-        List<String> resourceClasses = this.resourceClasses != null ? this.resourceClasses : Collections.emptyList();
+        List<String> resourcePackages = this.resourcePackages != null ? this.resourcePackages : List.of();
+        List<String> resourceClasses = this.resourceClasses != null ? this.resourceClasses : List.of();
 
         return new OpenApiLoader().load(resourcePackages, resourceClasses, spec, overrideSpec);
     }
@@ -114,5 +99,4 @@ public class OpenApiModelFactory {
     public void setSpec(ResourceFactory spec) {
         this.spec = spec;
     }
-
 }
